--- a/my_blog_app/templates/my_blog_app/profile.html
+++ b/my_blog_app/templates/my_blog_app/profile.html
@@ -1,6 +1,6 @@
 
 {% extends "base.html" %}
-{% block title %}Profile{% endblock %}
+{% load static %}{% block title %}Profile{% endblock %}
 {% block content %}
 <div style="max-width: 500px; margin: 40px auto; padding: 20px; border: 1px solid #ddd; border-radius: 12px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); text-align: center;">
 
@@ -8,7 +8,7 @@
       <img src="{{ user.profile.image.url }}" alt="Profile Picture" 
           style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 4px solid #007bff; margin-bottom: 15px">
    {% else %}
-      <img src="/media/default.jpg" alt="Default Profile Picture" 
+      <img src="{% static 'default.jpg' %}" alt="Default Profile Picture"
           style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 4px solid #ccc; margin-bottom: 15px">
    {% endif %}
 
@@ -40,7 +40,7 @@
             {{ u_form.as_p }}
             {{ p_form.as_p }}
          </div>
-         <button type="submit" style="background-color: #28a745; color: white; padding: 10px 20px; border: none; border-radius: 5px; font-weight: bold; corsor: pointer; width: 100%;">
+         <button type="submit" style="background-color: #28a745; color: white; padding: 10px 20px; border: none; border-radius: 5px; font-weight: bold; cursor: pointer; width: 100%;">
             Update Information
          </button>
       </form>
